unpackaged/main/default/objects/hed__Affiliation__c/fields/traa_Affiliations_PowerofOne__c.field-meta.xml
<CustomField>
    <fullName>traa_Affiliations_PowerofOne__c</fullName>
    <description>Power of One Formula Count Field</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Power of One Formula Count Field</inlineHelpText>
    <label>Affiliations (PowerofOne)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>