unpackaged/main/default/objects/hed__Affiliation__c/fields/traa_Primary_at_Recruitment__c.field-meta.xml
<CustomField>
    <fullName>traa_Primary_at_Recruitment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this was the primary academic degree affiliation when the student entered the recruitment cycle of the program.</description>
    <inlineHelpText>Indicates this was the primary academic degree affiliation when the student entered the recruitment cycle of the program.</inlineHelpText>
    <label>Primary at Recruitment</label>
    <type>Checkbox</type>
</CustomField>