unpackaged/main/default/objects/hed__Affiliation__c/fields/traa_Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>traa_Program_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Program Enrollment Record</description>
    <inlineHelpText>Lookup to Program Enrollment Record</inlineHelpText>
    <label>Program Enrollment</label>
    <referenceTo>hed__Program_Enrollment__c</referenceTo>
    <relationshipLabel>Affiliations</relationshipLabel>
    <relationshipName>traa_Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>