unpackaged/main/default/objects/hed__Affiliation__c/recordTypes/traa_student_program_affiliation.recordType-meta.xml
<RecordType>
    <fullName>traa_student_program_affiliation</fullName>
    <active>true</active>
    <description>Record type for student program affiliation</description>
    <label>Student Program Affiliation</label>
</RecordType>